src/App.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background: #f1f1f1;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

